--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">WeatherForecastUsingRetrofit</string>
+    <string name="widget_name">Weather Forecast Widget</string>
 </resources>
